@@ -184,6 +184,10 @@ a.error:hover {
     margin-bottom: 10px;
 }
 
+.modnavboxthumbs td, .modnavbox td{
+  text-align: center;
+}
+
 .nav                            /* used in navigation bars */
 	{
 	  font-size: 12px;
@@ -336,10 +340,6 @@ a.error:hover {
 }
 
 .popup td {
-}
-
-.popup {
-    color: #FFF;
 }
 
 /* CSS ID for the add photos popup */
