@@ -429,7 +429,6 @@ a.modcaption:hover {
 
 .popup /* controls the main text and message body */
 	 {
-	   text-align:center;
 	   font-size: 12px;
 	   font-weight: normal;
 	   color: #202020;
