@@ -1,3 +1,11 @@
+2006-09-04 Jens Tkotz <jens@peino.de> 1.5.5-svn-b5
+
+ * Fix: Preloading fix from b1 was not fully correct.
+
+ * Change: centered photo and navigation when embedded.
+
+ * Fix: HTML fix in ecard form.
+
 2006-09-04 Jens Tkotz <jens@peino.de> 1.5.5-svn-b4
 
  * Fix: Shadow frame files were corrupted ?!?
